--- a/index.html
+++ b/index.html
@@ -4,33 +4,47 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KPT Car Rental</title>
+
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
 </head>
 <body>
 
-<header>
+<header class="header">
   <h1>KPT Car Rental</h1>
   <p>Reliable • Affordable • Easy Booking</p>
 </header>
 
-<section class="cars">
+<main class="container">
+
   <h2>Available Cars</h2>
 
   <div class="car-card">
-    <h3>Toyota Corolla 2025</h3>
-    <p>Fuel-efficient sedan with modern features</p>
-    <p><strong>AED 120 / day</strong></p>
-    <button onclick="bookCar('Toyota Corolla 2025')">Book Now</button>
-  </div>
-</section>
+    <img src="https://images.unsplash.com/photo-1617531653332-bd46c24f2068" alt="Toyota Corolla">
 
-<section class="booking">
-  <h2>Booking Request</h2>
-  <input type="text" id="name" placeholder="Your Name" />
-  <input type="tel" id="phone" placeholder="Phone Number" />
-  <button onclick="sendBooking()">Send via WhatsApp</button>
-</section>
+    <div class="car-info">
+      <h3>Toyota Corolla 2025</h3>
+      <p>Fuel-efficient sedan with modern features. Perfect for city & long drives.</p>
+      <span class="price">AED 120 / day</span>
+
+      <button onclick="bookCar('Toyota Corolla 2025')">
+        Book Now
+      </button>
+    </div>
+  </div>
+
+  <div class="booking">
+    <h2>Booking Request</h2>
+
+    <input type="text" id="name" placeholder="Your Name" />
+    <input type="tel" id="phone" placeholder="Phone Number" />
+
+    <button class="whatsapp" onclick="sendBooking()">
+      Send via WhatsApp
+    </button>
+  </div>
+
+</main>
 
 <script src="app.js"></script>
 </body>
